/**
 * @ File name: Command.java
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-05-13 15:48:23
 */

package ex3;

public interface Command {
    public void execute();
    public void undo();
}